# libprotowire_util

./: .clang-format  .env  .gitignore  CMakeLists.txt  CMakePresets.json  COPYING.md  README.md  vcpkg.json
cmake/: add_catch_test.cmake  add_dep.cmake  add_object.cmake  add_vendored.cmake  bootstrap_vcpkg.cmake  iwyu.cmake  lint.cmake  tidy.cmake  tools_dir.cmake
docs/pages/: dev.md
include/protowire/metatypes/: tribool_p.hpp
include/protowire/test/: check_str.hpp  object_repr.hpp  type_repr.hpp  typecatch.hpp
include/protowire/util/: lstring.hpp  object_repr.hpp  type_name.hpp  type_repr.hpp
tests/: CMakeLists.txt  test_type_name.cpp
tests/test_tests/: CMakeLists.txt  test_object_repr.cpp  test_type_repr.cpp  test_typecatch.cpp
tests/util_tests/: CMakeLists.txt  test_lstring.cpp  test_object_repr.cpp  test_type_repr.cpp
